# web-tail

./: .dockerignore  .gitignore  .goreleaser.yaml  .prettierignore  Dockerfile  LICENSE  README.md  generate_logs.js  go.mod  go.sum  package-lock.json  package.json  rollup.config.js  tsconfig.json  web-tail.config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  executables.yml  new_ci.yml  node.js.yml  release.yml
client/: embed.go  index.html  main.ts  package.json  vite.config.ts
client/pages/: Logs.svelte
client/public/: global.css
client/src/: App.svelte  main.ts  utils.ts
client/src/components/: Header.svelte  LogLine.svelte  LogLines.svelte  SearchBar.svelte  Toggle.svelte
client/src/pages/: Logs.svelte
client/src/state/: logs.svelte.ts  search.svelte.ts  settings.svelte.ts  sources.svelte.ts
client/src/stores/: settings.ts  sources.ts
client/src/types/: CircularBuffer.ts
client/stores/: search.ts  settings.ts
pkg/logging/: logging.go
scripts/: build_wasm.js
server/: config.go  config_env.go  config_test.go  main.go  serverconfig.go  sources.go
src/: app.html
src/client/: App.svelte  main.ts  utils.ts
src/client/components/: Header.svelte  LogLine.svelte  LogLines.svelte  SearchBar.svelte  Toggle.svelte
src/client/pages/: Logs.svelte  Settings.svelte
src/common/wasm/: Cargo.toml
src/common/wasm/src/: lib.rs  utils.rs
src/lib/: utils.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/server/: index.js  index.ts
static/: global.css
utils/: generate_logs.js
(+22 files in other folders)
