[package]
name = "web-tail-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "0.1.1", optional = true }
